--- a/Proj_Mutlu_Mueller/Proj_Mutlu_Mueller/App.xaml
+++ b/Proj_Mutlu_Mueller/Proj_Mutlu_Mueller/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="FSST_projekt.App"
+﻿<Application x:Class="Proj_Mutlu_Mueller.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:FSST_projekt"
+             xmlns:local="clr-namespace:Proj_Mutlu_Mueller"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
