--- a/FSST_projekt/MainWindow.xaml
+++ b/FSST_projekt/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:FSST_projekt"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <Grid>
+    <Canvas>
         
-    </Grid>
+    </Canvas>
 </Window>
