Propieren von Visible Befehlen

--- a/Proj_Mutlu_Mueller/Proj_Mutlu_Mueller/MainWindow.xaml
+++ b/Proj_Mutlu_Mueller/Proj_Mutlu_Mueller/MainWindow.xaml
@@ -41,6 +41,12 @@
         <Label Canvas.Top="55" Canvas.Left="395">4</Label>
         <Label Canvas.Top="55" Canvas.Left="445">5</Label>
 
+        <Ellipse x:Name="Jahrgang1Pkt" Width="10" Height="10" Fill="Black" Canvas.Left="245" Canvas.Top="95" Visibility="Visible"></Ellipse>
+        <Ellipse x:Name="Jahrgang2Pkt" Width="10" Height="10" Fill="Black" Canvas.Left="295" Canvas.Top="95" Visibility="Hidden"></Ellipse>
+        <Ellipse x:Name="Jahrgang3Pkt" Width="10" Height="10" Fill="Black" Canvas.Left="345" Canvas.Top="95" Visibility="Hidden"></Ellipse>
+        <Ellipse x:Name="Jahrgang4Pkt" Width="10" Height="10" Fill="Black" Canvas.Left="395" Canvas.Top="95" Visibility="Hidden"></Ellipse>
+        <Ellipse x:Name="Jahrgang5Pkt" Width="10" Height="10" Fill="Black" Canvas.Left="445" Canvas.Top="95" Visibility="Hidden"></Ellipse>
+
         <TextBlock Canvas.Top="120" Canvas.Left="245" Width="35" Height="60"></TextBlock>
 
         <Label x:Name="LblWiederholen" Canvas.Top="210" Canvas.Left="245" FontWeight="Black">Wiederholen:</Label>
@@ -48,6 +54,8 @@
 
         <Label Canvas.Top="35" Canvas.Left="550" FontWeight="Black">Rucksack:</Label>
         <Label x:Name="LblRucksack" Canvas.Top="35" Canvas.Left="650"></Label>
+
+        <Label x:Name="lblFail" Canvas.Left="200" Canvas.Top="0" FontSize="200" FontWeight="Bold" Foreground="Red" Visibility="Hidden">FAIL</Label>
 
 
 
